--- a/templates/index.html
+++ b/templates/index.html
@@ -4,11 +4,11 @@
         <meta charset="UTF-8">
         <meta name-"viewport" content="width=device-width, initial-scale=1">
         <title>HackNC 2018</title>
-        <link rel="shortcut icon" type="image/png" type="image/png" href="static/assets/logo-transparent.png">
+        <link rel="shortcut icon" type="image/png" type="image/png" href="{{ url_for('static',filename='assets/logo-transparent.png') }}">
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Comfortaa"> 
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-beta/css/materialize.min.css">
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
-        <link rel="stylesheet" href="static/css/index.css">
+        <link rel="stylesheet" href="{{ url_for('static',filename='css/main.css') }}">
         <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-beta/js/materialize.min.js"></script>
     </head>
     <body>
@@ -16,13 +16,13 @@
             <div class="container">
                 <!-- Logo and header -->
                 <div class="section">
-                    <img id="logo" src="static/assets/CarnivalBanner.png">
+                    <img id="logo" src="{{ url_for('static',filename='assets/CarnivalBanner.png') }}">
                     <h1 id="hacknc" class="center">HackNC</h1>
                     <h5 id="fall2018" class="center">Fall 2018</h5>
                 </div>
 
                 <!-- Email form  -->
-                <div class="section">
+                <div class="email-section section">
                     <div class="row center">
                         <form method="post" class="center col s12 m8 offset-m2">
                             <div id="email-ifield" class='input-field inline'>
@@ -33,11 +33,28 @@
                         </form>
                     </div>
                 </div>
+
+                <div class="contact section">
+                    <div class="row center">
+                        <div class="center col s3"><a href="https://www.facebook.com/thehacknc/">
+                            <i class="fab fa-facebook-square"></i><span> Facebook</span></a>
+                        </div>
+                        <div class="center col s3"><a href="https://twitter.com/thehacknc">
+                            <i class="fab fa-twitter-square"></i><span> Twitter</span></a>
+                        </div>
+                        <div class="center col s3"><a href="https://www.snapchat.com/add/hacknc">
+                            <i class="fab fa-snapchat-square"></i><span> Snapchat</span></a>
+                        </div>
+                        <div class="center col s3"><a href="mailto:hello@hacknc.com">
+                                <i class="fas fa-envelope-square"></i><span> hello@hacknc.com</span></a>
+                            </div>
+                    </div>
+                </div>
             </div>
         </div>
 
-        <!-- Response message after email is submitted -->
         {% if msg %}
+        <!-- Response message after email is submitted -->
             <script>
                 M.toast({html: '{{ msg }}', displayLength: 5000});
             </script>
