--- a/templates/index.html
+++ b/templates/index.html
@@ -2,7 +2,7 @@
 <html>
     <head lang="en-us">
         <meta charset="UTF-8">
-        <meta name-"viewport" content="width=device-width, initial-scale=1">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>HackNC 2018</title>
         <link rel="shortcut icon" type="image/png" type="image/png" href="{{ url_for('static',filename='assets/logo-transparent.png') }}">
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Comfortaa"> 
