--- a/static/css/main.css
+++ b/static/css/main.css
@@ -78,9 +78,7 @@ body {
 
 .contact {
     background-color: rgba(0,0,0,0) !important;
-    position: fixed;
-    bottom: 0;
-    left: 0;
+    position: relative;
     width: 100%;
 }
 
