--- a/static/sass/main.scss
+++ b/static/sass/main.scss
@@ -83,6 +83,19 @@ nav ul a {
     }
 }
 
+.map-container {
+    width: 100%;
+    height: 400px;
+}
+
+.map-container iframe {
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
+
+
 footer {
     background-color: $g-plum !important;
 }
@@ -102,4 +115,3 @@ footer a {
         font-size: 0;
     }
 }
-      
