--- a/static/css/main.css
+++ b/static/css/main.css
@@ -2,15 +2,13 @@ body {
   color: #FFEDCC !important;
   background: #3A3352;
   font-family: 'Quicksand', sans-serif;
-  font-size: 1em;
-  height: 100%; }
+  font-size: 1em; }
 
 .section {
   font-size: 1.3em; }
 
 main {
-  background: #3A3352;
-  height: 100%; }
+  background: #3A3352; }
 
 .dark {
   background: #3A3352; }
@@ -20,7 +18,7 @@ main {
   color: #3A3352; }
 
 .banner {
-  height: 100%; }
+  height: 100vh; }
 
 .logo {
   display: block;
