--- a/static/sass/main.scss
+++ b/static/sass/main.scss
@@ -5,7 +5,6 @@ body {
     background: $g-plum;
     font-family: 'Quicksand', sans-serif;
     font-size: 1em;
-    height: 100%;
 }
 
 .section {
@@ -14,7 +13,6 @@ body {
 
 main {
     background: $g-plum;
-    height: 100%;
 }
 
 .dark {
@@ -27,7 +25,7 @@ main {
 }
 
 .banner {
-    height: 100%;
+    height: 100vh;
 }
 
 .logo {
