--- a/static/css/main.css
+++ b/static/css/main.css
@@ -62,6 +62,12 @@ nav ul a {
   z-index: 100;
   position: fixed; }
 
+.nav-anchor {
+  display: block;
+  position: relative;
+  top: -64px;
+  visibility: hidden; }
+
 .collapsible {
   border: 5px solid #f9d695;
   border-radius: 5px;
@@ -101,12 +107,5 @@ footer a {
   text-decoration: none;
   white-space: nowrap;
   font-size: 120%; }
-
-@media only screen and (max-width: 600px) {
-  footer a {
-    font-size: 250%; }
-
-  footer a span {
-    font-size: 0; } }
 
 /*# sourceMappingURL=main.css.map */
