--- a/static/sass/components/_palette.scss
+++ b/static/sass/components/_palette.scss
@@ -5,9 +5,9 @@ $g-gold: #FEB252;
 $g-off-white: #FFEDCC;
 $g-plum: #3A3352;
 
-$f-color: #FFEDCC;
+$f-color: #fcece3;
 
 //
 $dark-bg: #3A3352;
-$light-bg: #FFEDCC;
-$border: #f9d695;
+$light-bg: #fcece3;
+$border: #fcece3;
