--- a/static/css/main.css
+++ b/static/css/main.css
@@ -99,14 +99,13 @@ nav ul a {
   width: 100%;
   height: 100%; }
 
-footer {
-  background-color: #3A3352 !important; }
-
-footer h2 {
-  color: #fcece3; }
+.sponsor-image {
+  display: inline-block;
+  width: 40%;
+  min-width: 300px; }
 
 footer a {
-  color: #fcece3;
+  color: #3A3352;
   text-decoration: none;
   white-space: nowrap;
   font-size: 120%; }
