--- a/static/css/main.css
+++ b/static/css/main.css
@@ -36,7 +36,7 @@ main {
   margin-top: 0; }
 
 .form-btn, .form-btn:focus {
-  width: 300px;
+  width: 350px;
   height: 60px;
   font-size: 1.5em;
   background-color: #FF8878;
@@ -48,6 +48,9 @@ main {
 .form-btn:hover {
   background-color: #FF8878;
   color: #fcece3; }
+
+.modal .form-btn {
+  width: 60%; }
 
 nav {
   width: 100%;
