--- a/static/sass/main.scss
+++ b/static/sass/main.scss
@@ -9,6 +9,7 @@ body {
 
 a {
     color: $g-red;
+    font-weight: bold;
 }
 
 .section {
@@ -29,7 +30,7 @@ main {
 }
 
 .banner {
-    height: 100vh;
+    min-height: 100vh;
 }
 
 .logo {
@@ -51,9 +52,9 @@ main {
 }
 
 .form-btn, .form-btn:focus {
-    width: 350px;
+    width: 25vw;
     height: 60px;
-    font-size: 1.5em;
+    font-size: 1em;
     background-color: $g-light-red;
     color: $f-color;
     text-transform: none;
@@ -66,10 +67,15 @@ main {
     color: $f-color;
 }
 
+@media only screen and (max-width: 600px) {
+    .form-btn, .form-btn:focus, .form-btn:hover {
+        width: 70vw;
+    }
+}
 
 .modal {
     .form-btn {
-        width: 60%;
+        font-size: 1.5em;
     }
 }
 
@@ -83,6 +89,7 @@ nav ul a {
     color: $f-color;
     margin: 0px 0px 0px 20px;
     font-size: 1.2rem;
+    font-weight: normal;
 }
 
 .nfixed {
@@ -140,28 +147,10 @@ nav ul a {
     min-width: 300px;
 }
 
-// .tier-4 {
-    
-// }
-
-// .tier-3 {
-//     width: 30%;
-//     min-width: 250px;
-// }
-
-// .tier-2 {
-//     width: 25%;
-//     min-width: 250px;
-// }
-
-// .tier-1 {
-//     width: 16%;
-//     min-width: 200px;
-// }
-
 footer a {
     color: $dark-bg;
     text-decoration: none;
     white-space: nowrap;
     font-size: 120%;
+    font-weight: normal;
 }
