--- a/static/sass/main.scss
+++ b/static/sass/main.scss
@@ -55,6 +55,7 @@ main {
     width: 25vw;
     height: 60px;
     font-size: 1em;
+    overflow: hidden;
     background-color: $g-light-red;
     color: $f-color;
     text-transform: none;
