--- a/static/css/main.css
+++ b/static/css/main.css
@@ -81,19 +81,19 @@ nav ul a {
   visibility: hidden; }
 
 .collapsible {
-  border: 5px solid #fcece3;
+  border: 5px solid #3A3352;
   border-radius: 5px;
-  color: #3A3352; }
+  color: #fcece3; }
 
 .collapsible-header {
-  background: #fcece3;
+  background: #3A3352;
   border-bottom: 0px; }
   .collapsible-header h6 {
     font-weight: 600; }
 
 .collapsible-body {
   padding: 1rem;
-  color: #fcece3;
+  color: #3A3352;
   border-bottom: 0px; }
   .collapsible-body p {
     margin: 0 0 0 0; }
@@ -114,7 +114,7 @@ nav ul a {
   min-width: 200px; }
 
 footer a {
-  color: #3A3352;
+  color: #fcece3;
   text-decoration: none;
   white-space: nowrap;
   font-size: 120%;
