--- a/static/sass/main.scss
+++ b/static/sass/main.scss
@@ -149,8 +149,30 @@ nav ul a {
 
 .sponsor-image {
     display: inline-block;
-    width: 30%;
+}
+
+.tier-4 {
+    max-width: 80%;
+    min-width: 250px;
+    max-height: 250px;
+}
+
+.tier-3 {
+    max-width: 70%;
     min-width: 200px;
+    max-height: 200px;
+}
+
+.tier-2 {
+    max-width: 60%;
+    min-width: 200px;
+    max-height: 150px;
+}
+
+.tier-1 {
+    max-width: 40%;
+    min-width: 150px;
+    max-height: 100px;
 }
 
 footer a {
