--- a/static/css/main.css
+++ b/static/css/main.css
@@ -117,23 +117,26 @@ nav ul a {
 
 .tier-4 {
   max-width: 80%;
-  min-width: 250px;
+  min-width: 300px;
   max-height: 250px; }
 
 .tier-3 {
   max-width: 70%;
-  min-width: 200px;
+  min-width: 260px;
   max-height: 200px; }
 
 .tier-2 {
-  max-width: 60%;
-  min-width: 200px;
-  max-height: 150px; }
+  max-width: 70%;
+  min-width: 240px;
+  max-height: 180px; }
 
 .tier-1 {
   max-width: 40%;
-  min-width: 150px;
+  min-width: 180px;
   max-height: 100px; }
+
+.sponsor-row .col {
+  float: none; }
 
 footer a {
   color: #fcece3;
