added media query fixing sponsor spacing

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -135,9 +135,9 @@ nav ul a {
   min-width: 180px;
   max-height: 100px; }
 
-.sponsor-row .col {
-  float: none; }
-
+@media only screen and (max-width: 600px) {
+  .sponsor-row .col {
+    float: none; } }
 footer a {
   color: #fcece3;
   text-decoration: none;
