--- a/static/css/main.css
+++ b/static/css/main.css
@@ -148,8 +148,11 @@ nav ul a {
 @media only screen and (max-width: 600px) {
   .sponsor-row .col {
     float: none; } }
+.prizes .dark {
+  background: #2d273f; }
+
 footer a {
-  color: #fcece3;
+  color: #3A3352;
   text-decoration: none;
   white-space: nowrap;
   font-size: 120%;
