--- a/static/sass/live.scss
+++ b/static/sass/live.scss
@@ -67,6 +67,10 @@ body {
     width: 100% !important;
 }
 
+.twitter-timeline {
+    margin: 0 0 2rem 0 !important;
+}
+
 .card {
     margin: 0 0 2rem 0 !important;
     background-color: white;
