--- a/static/sass/live.scss
+++ b/static/sass/live.scss
@@ -26,14 +26,6 @@ $a-tags-hover: 'a:active, a:hover';
     }
 }
 
-* {
-    font-family: 'Helvetica';
-    font-size: 1.1rem;
-    @include mq('tablet') {
-        font-size: 1.3rem;
-    }
-}
-
 body {
     background-color: $dark-bg;
 }
@@ -43,6 +35,7 @@ body {
     background-color: $g-light-red;
     color: $f-color;
     text-transform: none;
+    font-size: 1.2em;
     font-weight: 200;
     margin: 0.5em auto 1em auto;
 }
@@ -50,6 +43,7 @@ body {
 .btn:hover {
     background-color: $g-light-red;
     color: $f-color;
+    font-size: 1.2em;
 }
 
 .logo {
@@ -68,6 +62,7 @@ body {
 }
 
 .twitter-timeline {
+    max-height: 300px;
     margin: 0 0 2rem 0 !important;
 }
 
