--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1,5 +1,5 @@
 body {
-  color: #fcece3 !important;
+  color: #fcece3;
   background: #3A3352;
   font-family: 'Quicksand', sans-serif;
   font-size: 1em; }
