--- a/static/sass/main.scss
+++ b/static/sass/main.scss
@@ -1,7 +1,7 @@
 @import "components/palette";
 
 body {
-    color: $f-color !important;
+    color: $f-color;
     background: $g-plum;
     font-family: 'Quicksand', sans-serif;
     font-size: 1em;
