Resized btn, reworded and centered headers

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -26,7 +26,7 @@ main {
 
 .logo {
   display: block;
-  max-width: 42%;
+  max-width: 36%;
   margin: auto;
   z-index: -1; }
 
@@ -37,9 +37,9 @@ main {
   margin-top: 0; }
 
 .form-btn, .form-btn:focus {
-  width: 20vw;
+  width: 400px;
   height: 60px;
-  font-size: 1.2em;
+  font-size: 1em;
   overflow: hidden;
   background-color: #FF8878;
   color: #fcece3;
@@ -53,8 +53,9 @@ main {
 
 @media only screen and (max-width: 600px) {
   .form-btn, .form-btn:focus, .form-btn:hover {
-    width: 70vw;
+    width: 60vw;
     height: auto;
+    min-height: 60px;
     line-height: 1.5; } }
 .modal .form-btn {
   font-size: 1.5em; }
